--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Manu Purswani | Author</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Manu Purswani | Author of Chaos & Myth</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <!-- Navigation Bar -->
   <header>
-    <nav>
+    <nav class="navbar">
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="books.html">Books</a></li>
@@ -20,43 +20,47 @@
     </nav>
   </header>
 
-  <!-- Home Section -->
+  <!-- Hero / Welcome Section -->
   <section class="home">
-    <h1>Welcome to the World of Manu Purswani</h1>
-    <p>Author of thrilling stories that mix chaos, mystery, and adventure. Dive into my latest books!</p>
-    <a href="books.html" class="btn">Explore My Books</a>
+    <div class="hero-text">
+      <h1>Welcome to the Realm of Manu Purswani</h1>
+      <p>Crafting stories where chaos reigns, myths breathe, and characters fear their creator (rightfully so).</p>
+      <a href="books.html" class="btn">Enter the World</a>
+    </div>
   </section>
 
   <!-- Featured Books -->
   <section class="featured-books">
     <h2>Featured Books</h2>
-    <div class="book">
-      <img src="book1.jpg" alt="Book 1 Cover">
-      <h3>Book 1 Title</h3>
-      <p>Short description of the book.</p>
-      <a href="book1.html" class="btn">Read More</a>
-    </div>
-    <div class="book">
-      <img src="book2.jpg" alt="Book 2 Cover">
-      <h3>Upcoming Book Title</h3>
-      <p>Short teaser for the next book.</p>
-      <a href="book2.html" class="btn">Learn More</a>
+    <div class="books-grid">
+      <div class="book">
+        <img src="book1.jpg" alt="Book 1 Cover" />
+        <h3><em>Book 1 Title</em></h3>
+        <p>A cosmic journey through myth, mystery, and character suffering (you're welcome).</p>
+        <a href="book1.html" class="btn">Read More</a>
+      </div>
+      <div class="book">
+        <img src="book2.jpg" alt="Upcoming Book Cover" />
+        <h3><em>Upcoming Book Title</em></h3>
+        <p>Still brewing in the mind of chaos. Prepare yourself.</p>
+        <a href="book2.html" class="btn">Learn More</a>
+      </div>
     </div>
   </section>
 
   <!-- Newsletter Signup -->
   <section class="newsletter">
-    <h2>Stay Updated</h2>
-    <p>Sign up for the latest updates, sneak peeks, and announcements about my books!</p>
+    <h2>Stay in the Loop</h2>
+    <p>Subscribe for celestial updates, writing behind-the-scenes, and exclusive mythic chaos.</p>
     <form action="subscribe.php" method="post">
-      <input type="email" placeholder="Your Email" required>
+      <input type="email" name="email" placeholder="Your Email" required />
       <button type="submit">Subscribe</button>
     </form>
   </section>
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 Manu Purswani. All rights reserved.</p>
+    <p>&copy; 2025 Manu Purswani. All rights reserved. Powered by coffee, chaos, and cosmic energy.</p>
   </footer>
 </body>
 </html>
